--- a/code/src/aml-service/requirements.txt
+++ b/code/src/aml-service/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.3
 click==8.3.0
 colorama==0.4.6
 Flask==3.1.2
+flask-cors==6.0.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -11,4 +12,3 @@ MarkupSafe==3.0.2
 requests==2.32.5
 urllib3==2.5.0
 Werkzeug==3.1.3
-pandas
